2004-06-11  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome26.modules (gnome-desktop): require
	scrollkeeper (fixes bug #143515).

	* modulesets/gnome28.modules (gnome-desktop): require
	scrollkeeper (fixes bug #143515).

	* modulesets/freedesktop.modules (xkbfile): add module.  Fixes bug
	#144024.
	(xtrans): grab the XTRANS-0_1-RELEASE tag, as suggested in bug
	#143670.

2004-06-11  Daniel Elstner  <daniel.elstner@gmx.net>

	* modulesets/gnome2[68].modules (gnomemm/gtkmm_hello): New module.

2004-06-11  Daniel Elstner  <daniel.elstner@gmx.net>

	* modulesets/gnome2[68].modules (regexxer): Add dep on intltool.

2004-06-10  James Henstridge  <james@jamesh.id.au>

	* modulesets/moduleset.dtd: update DTD.

	* modulesets/moduleset.rnc: update RELAX-NG schema.

	Based on a patch from Thomas Fitzsimmons:
	
	* jhbuild/modtypes/tarball.py (Tarball.__init__): add makeargs
	argument.
	(Tarball.do_build): use makeargs if set.
	(Tarball.do_install): same.
	(parse_tarball): parse makeargs attribute.

	* jhbuild/modtypes/mozillamodule.py (MozillaModule.__init__): add
	makeargs argument.
	(parse_mozillamodule): parse makeargs attribute.

	* jhbuild/modtypes/base.py (CVSModule.__init__): add makeargs
	argument.
	(CVSModule.do_clean): use module local makeargs if set.
	(CVSModule.do_build): same.
	(CVSModule.do_check): same.
	(CVSModule.do_install): same.
	(parse_cvsmodule): allow module local makeargs.

	* jhbuild/defaults.jhbuildrc (module_autogenargs): default key to
	an empty dictionary.

	* jhbuild/config.py (_known_keys): add 'module_makeargs' key.

2004-06-04  James Henstridge  <james@daa.com.au>

	* modulesets/moduleset.rnc: same changes here.

	* modulesets/moduleset.dtd: update DTD for
	supports-non-srcdir-builds attribute on cvsmodule and tarball
	elements.

	* jhbuild/modtypes/tarball.py (Tarball.__init__): add
	supports_non_srcdir_builds property.
	(Tarball.get_builddir): check supports_non_srcdir_builds property.